Upgrade Presto version to 334